--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,18 @@
 .read-the-docs {
   color: #888;
 }
+
+
+#contact{
+
+  width: 200px;
+  height: 300px;
+  background-color: #888;
+}
+
+#about{
+
+  width: 350px;
+  height: 200px;
+  background-color: aqua;
+}
